Format elapsed and profile times to between 6 and 9 decimal places (micro- to nanoseconds).

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,7 @@
     <ol>
       <li>Support running XPath queries as XSLT patterns (XPath subset) on the Saxon query processor.</li>
       <li>Support profiling Saxon XSLT and XQuery scripts.</li>
+      <li>Display the elapsed time and number of items returned by the query in the results console.</li>
     </ol>
     <p>Saxon:</p>
     <ol>
