Format the elapsed time and item count as a single line in the query results console.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -6,8 +6,7 @@ browser.choose.script-file=Script File
 console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
 console.action.save.profile.title=Save Profile Report
-console.result-count.label=Items: {0}
-console.result-count.label.no-value=Items:
+console.summary.label={0} items \u2013 {1}
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
 executor.profile.start.action=Profile
