Display the profile result tab along side the query results.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,6 +19,7 @@
       <li>Support running XPath queries as XSLT patterns (XPath subset) on the Saxon query processor.</li>
       <li>Support profiling Saxon XSLT and XQuery scripts.</li>
       <li>Display the elapsed time and number of items returned by the query in the results console.</li>
+      <li>Include the console output when profiling queries.</li>
     </ol>
     <p>Saxon:</p>
     <ol>
