--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -7,6 +7,8 @@ console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
 console.action.save.profile.title=Save Profile Report
 console.summary.label={0} items \u2013 {1}
+console.tab.profile.label=Profile
+console.tab.results.label=Results
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
 executor.profile.start.action=Profile
