Rename the 'Profile' tab to 'Histogram', and the associated implementation classes.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -7,7 +7,7 @@ console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
 console.action.save.profile.title=Save Profile Report
 console.summary.label={1} \u2013 {0} items
-console.tab.profile.label=Profile
+console.tab.histogram.label=Histogram
 console.tab.results.label=Results
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
@@ -18,12 +18,6 @@ processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
 processor.exception.unsupported-operation=Configuration not supported by the processor
-profile.console.created.label=Created: {0}
-profile.console.created.label.no-value=Created:
-profile.console.elapsed.label=Elapsed: {0}
-profile.console.elapsed.label.no-value=Elapsed:
-profile.console.version.label=Version: {0}
-profile.console.version.label.no-value=Version:
 profile.entry.table.column-number.column.label=Column
 profile.entry.table.count.column.label=Count
 profile.entry.table.deep-time.column.label=Deep Time (s)
