--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -31,6 +31,7 @@ query.result.table.has-exception=The query failed with an exception
 query.result.table.item-type.column.label=Item Type
 query.result.table.mime-type.column.label=MIME Type
 query.result.table.no-results=The query returned an empty sequence
+query.result.table.results-elapsed=The query has been running for {0}
 query.result.table.results-pending=The query is still running
 query.result.table.value.column.label=Value
 xquery.configurations.data-source.not-specified.label=Not specified
