Display the elapsed time reported by the query processor in the query results table.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -6,7 +6,7 @@ browser.choose.script-file=Script File
 console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
 console.action.save.profile.title=Save Profile Report
-console.summary.label={1} \u2013 {0} items
+console.summary.label={0} items in {1}
 console.tab.histogram.label=Histogram
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
