Add the item index to the query result table.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -25,9 +25,9 @@ profile.entry.table.has-exception=The query failed with an exception
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
 profile.entry.table.no-results=No detailed profile results available
-profile.entry.table.results-pending=The query is still running
 profile.entry.table.shallow-time.column.label=Shallow Time (s)
 query.result.table.has-exception=The query failed with an exception
+query.result.table.index.column.label=Index
 query.result.table.item-type.column.label=Item Type
 query.result.table.mime-type.column.label=MIME Type
 query.result.table.no-results=The query returned an empty sequence
