Rename {Histogram => FlatProfile}TableView.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -7,7 +7,7 @@ console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
 console.action.save.profile.title=Save Profile Report
 console.summary.label={0} items in {1}
-console.tab.histogram.label=Histogram
+console.tab.flat-profile.label=Flat Profile
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
 executor.profile.start.action=Profile
