Rename FlatProfileEntry.{expression => context}.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -20,7 +20,7 @@ processor.exception.unsupported-operation=Configuration not supported by the pro
 profile.entry.table.column-number.column.label=Column
 profile.entry.table.count.column.label=Count
 profile.entry.table.deep-time.column.label=Deep Time (s)
-profile.entry.table.expression.column.label=Expression
+profile.entry.table.context.column.label=Context
 profile.entry.table.has-exception=The query failed with an exception
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
