Rename FlatProfileEntry.{shallow => self}Time.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -25,7 +25,7 @@ profile.entry.table.has-exception=The query failed with an exception
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
 profile.entry.table.no-results=No detailed profile results available
-profile.entry.table.shallow-time.column.label=Shallow Time (s)
+profile.entry.table.self-time.column.label=Self Time (s)
 query.result.table.has-exception=The query failed with an exception
 query.result.table.index.column.label=Index
 query.result.table.item-type.column.label=Item Type
